--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/649719596/hotbox-ui.git"
+  },
   "author": "",
   "license": "ISC",
   "keywords": []
